<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/profile_layout"
    android:background="@drawable/background_bluegradiant2">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Level"
            android:textColor="#FFF"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:fontFamily="@font/nunito"
                android:text="You are a "/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="25dp"
                android:id="@+id/profile_level"
                android:fontFamily="@font/nova_slim"
                android:text="Noob Master"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="News Points [NP]"
            android:gravity="center"
            android:textColor="#FFF"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:fontFamily="@font/nunito"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/nova_slim"
            android:gravity="center"
            android:id="@+id/profile_np"
            android:text="00"
            android:textSize="25dp"
            android:textColor="#FFF" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/newsTheme">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="News Theme"
                android:textColor="#FFF"
                android:id="@+id/newsTheme_hd"
                android:textSize="18sp"
                android:fontFamily="@font/nunito" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Violet-Blue"
                android:id="@+id/newsThemeText"
                android:fontFamily="@font/nova_slim"
                android:gravity="start|center"
                android:textColor="#FFF"
                android:textSize="25dp"
                android:layout_below="@+id/newsTheme_hd"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/newsTheme_hd"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_arrow_right" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#252525"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/developerModePassword"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:textColor="#FFF"
                    android:layout_marginTop="5dp"
                    android:text="Enter password to enter developer mode"
                    android:gravity="center"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/developerPassword"
                    android:background="@drawable/background4"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:hint="Enter password"
                    android:gravity="center"
                    android:textColor="#FFF"
                    android:textColorHint="#B6B6B6"
                    android:textSize="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/developerModeMain"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:text="Developer Mode"
                    android:fontFamily="@font/nunito"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <View
                    android:layout_width="170dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="#FFF"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#FFF"
                    android:fontFamily="@font/nunito"
                    android:text="Being a developer, one can also customize the news points.
And customize the news points for unlocking all features."
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Custom News Points:"
                        android:textColor="#FFF"
                        android:fontFamily="@font/nunito"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background4"
                        android:layout_marginStart="10dp"
                        android:id="@+id/customNP"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:textColor="#FFF"
                        android:hint="Enter News Points"
                        android:textColorHint="#FFF"
                        android:fontFamily="@font/nunito"
                        android:textSize="13sp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#B83058"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#B83058"
                    android:textColor="#FFF"
                    android:text="@string/news_points_hd"
                    android:fontFamily="@font/nunito"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <View
                    android:layout_width="170dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="#FFF"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#FFF"
                    android:fontFamily="@font/nunito"
                    android:text="@string/news_point_desc"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#2058B0"
            app:cardCornerRadius="10dp"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2058B0"
                    android:textColor="#FFF"
                    android:text="@string/level_hd"
                    android:fontFamily="@font/nunito"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <View
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="#FFF"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="#FFF"
                    android:fontFamily="@font/nunito"
                    android:text="@string/level_desc" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FF4500"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FF4500"
                    android:textColor="#FFF"
                    android:text="Features"
                    android:fontFamily="@font/nunito"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <View
                    android:layout_width="120dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="#FFF"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#FFF"
                    android:fontFamily="@font/nunito"
                    android:text="· Deep Sea theme for news unlocks at 'Reader' level\n· Dark theme for news and environment sensor in weather unlocks at 'Front Bencher' level."
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:id="@+id/navigationView"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_drawer"
        app:itemIconTint="#FFF"
        android:theme="@style/SideDrawer"
        android:background="@drawable/background_bluegradiant2"
        app:itemTextColor="#FFF"/>

</androidx.drawerlayout.widget.DrawerLayout>